--- a/train/config.yaml
+++ b/train/config.yaml
@@ -1,39 +1,46 @@
-# Identity Preservation Model Training Configuration
+# Identity Preservation Training Configuration for Flux
 
 # Dataset parameters
-data_dir: "dataset_creation/data/dataset"
-bundle_dirs: ["0", "1", "2", "3"]  # Use first 4 bundles
-max_chars_per_bundle: 50  # Limit characters per bundle to prevent memory issues
+data_dir: "dataset"  # Dataset is in the train folder
+max_chars_per_bundle: 20  # Limit characters per bundle to prevent memory issues
 min_images_per_char: 3  # Minimum number of images per character
-cache_dir: "./cache/identity_preserving"
+reference_image_idx: 0
+cache_dir: "cache/identity_preserving"  # Relative to script location
 use_cache: true  # Enable caching of extracted features
 
 # Model parameters
+use_simple_model: true
+input_size: 512
 num_face_latents: 16
 num_body_latents: 16
-num_fused_latents: 32
-use_identity_fusion: true
+face_injection_index: 17
+body_injection_index: 9
 
 # Training parameters
-batch_size: 4
-num_epochs: 50
-lr: 0.0001
+batch_size: 2  # Small batch size for testing
+num_epochs: 2  # Short test run
+learning_rate: 0.0001
 weight_decay: 0.00001
 face_weight: 1.0
 body_weight: 0.5
 content_weight: 0.5
 val_split: 0.1
 test_split: 0.1
-use_amp: true  # Enable automatic mixed precision
-num_workers: 4
-log_interval: 10
+use_amp: false  # Disable AMP for compatibility with Flux at first
+num_workers: 2  # Lower to prevent memory issues
+log_interval: 5
+save_interval: 1
 device: "cuda"
 seed: 42
 
+# Generation parameters
+guidance_scale: 7.0
+num_inference_steps: 10
+
 # Output parameters
-output_dir: "./checkpoints/identity_preserving"
-run_name: "identity_preserving_v1"
+output_dir: "checkpoints/identity_preserving"  # Relative to script location
+run_name: "identity_preserving_flux_test"
 
 # Wandb parameters
-use_wandb: true
+use_wandb: false  # Disabled by default for production training
 wandb_project: "identity-preserving-flux" 
