--- a/train/config.yaml
+++ b/train/config.yaml
@@ -1,23 +1,18 @@
-# Identity Preservation Training Configuration for Flux
-
-# Dataset parameters
-data_dir: "dataset"  # Dataset is in the train folder
-max_chars_per_bundle: 20  # Limit characters per bundle to prevent memory issues
-min_images_per_char: 3  # Minimum number of images per character
+data_dir: "dataset"
+max_chars_per_bundle: 20
+min_images_per_char: 3
 reference_image_idx: 0
-cache_dir: "cache/identity_preserving"  # Relative to script location
-use_cache: true  # Enable caching of extracted features
+cache_dir: "cache/identity_preserving"
+use_cache: true
 
-# Model parameters
 input_size: 512
 num_face_latents: 16
 num_body_latents: 16
 face_injection_index: 17
 body_injection_index: 9
 
-# Training parameters
-batch_size: 2  # Small batch size for testing
-num_epochs: 30  # Short test run
+batch_size: 2
+num_epochs: 30
 learning_rate: 0.0001
 weight_decay: 0.00001
 face_weight: 1.0
@@ -25,21 +20,18 @@ body_weight: 0.5
 content_weight: 0.5
 val_split: 0.1
 test_split: 0.1
-use_amp: false  # Disable AMP for compatibility with Flux at first
-num_workers: 2  # Lower to prevent memory issues
+use_amp: false
+num_workers: 2
 log_interval: 5
 save_interval: 1
 device: "cuda"
 seed: 42
 
-# Generation parameters
 guidance_scale: 7.0
 num_inference_steps: 10
 
-# Output parameters
-output_dir: "checkpoints/identity_preserving"  # Relative to script location
+output_dir: "checkpoints/identity_preserving"
 run_name: "identity_preserving_flux"
 
-# Wandb parameters
-use_wandb: false  # Disabled by default for production training
+use_wandb: false
 wandb_project: "identity-preserving-flux" 
